kub/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service


spec:
  selector:
    app: awesome-cats-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  # type: LoadBalancer
  type: ClusterIP
