kub/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  selector:
    app: awesome-cats-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  # type: ClusterIP
